Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/annotations/typeAnnotations/failures/common/newarray/MissingAnnotationValue.out
MissingAnnotationValue.java:12:29: compiler.err.annotation.missing.default.value: A, field
1 error
